[project]
name = "timelinekgqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas~=2.2.1",
    "jupyter~=1.0.0",
    "sqlalchemy~=2.0.29",
    "psycopg2-binary",
    "isort~=5.13.2",
    "ruff",
    "igraph~=0.11.4",
    "plotly~=5.20.0",
    "transformers~=4.39.3",
    "sentence-transformers",
    "requests",
    "openai",
    "mkdocstrings[python]",
    "mkdocs",
    "mkdocs-material",
    "mkdocs_gen_files",
    "mkdocs-encryptcontent-plugin",
    "flake8",
    "tqdm",
    "gradio",
    "tiktoken",
    "mesop",
    "seaborn",
    "pytest",
    "hypothesis>=6.150.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.1",
]
cuda128 = [
  "torch>=2.7.1",
]
rocm64 = [
  "torch>=2.7.1",
  "pytorch-triton-rocm>=3.1.0", 
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda128" },
    { extra = "rocm64" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cuda128", extra = "cuda128" },
  { index = "pytorch-rocm64", extra = "rocm64" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm64", extra = "rocm64" },
]

[[tool.uv.index]]
name = "pytorch-cuda128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm64"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true
