[project]
name = "timelinekgqa"
version = "0.1.0"
description = "TimelineKGQA is a temporal knowledge graph question generator."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas~=2.2.1",
    "sqlalchemy~=2.0.29",
    "psycopg2-binary",
    "igraph~=0.11.4",
    "plotly~=5.20.0",
    "transformers~=4.39.3",
    "sentence-transformers",
    "requests",
    "openai",
    "tqdm",
    "tiktoken",
    "datasets>=4.7.0",
    "dspy>=3.1.3",
    "rapidfuzz>=3.14.3",
    "torch-geometric>=2.7.0",
    "evaluate>=0.4.6",
]

[dependency-groups]
dev = [
    "isort",
    "ruff",
    "pytest",
    "hypothesis>=6.150.0"
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.1",
]
cuda128 = [
  "torch>=2.7.1",
]
rocm64 = [
  "torch>=2.7.1",
  "pytorch-triton-rocm>=3.1.0", 
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda128" },
    { extra = "rocm64" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cuda128", extra = "cuda128" },
  { index = "pytorch-rocm64", extra = "rocm64" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm64", extra = "rocm64" },
]

[[tool.uv.index]]
name = "pytorch-cuda128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm64"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true
